add links and new design for text and block

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                 <a href="" class="categori-head">Афиша</a>
             </li>
             <li id="sing-up-and-make-blog">
-                <i class="fas fa-search"></i>
+                <a id="blog-search" href="">
+                    <i class="fas fa-search"></i>
+                </a>
                 <a id="blog-write" href="">
                     <i class="fas fa-pen-square">
                         <span>НАПИСАТЬ В БЛОГ</pan>
@@ -69,7 +71,7 @@
         <ul class="blogs-block">
             <ul id="first_element" class="blogs-info">
                 <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                    <img src="https://picsum.photos/230/?random" height="220px" width="100%" alt="">
                 </li>
                 <li class="titles">  
                     <span>БЛОГ</span>
@@ -83,7 +85,7 @@
             </ul>
             <ul class="blogs-info">
                 <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                    <img src="https://picsum.photos/230/?random" height="220px" width="100%" alt="">
                 </li>
                 <li class="titles">  
                     <span>БЛОГ</span>
@@ -97,7 +99,7 @@
             </ul>
             <ul class="blogs-info">
                 <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                    <img src="https://picsum.photos/230/?random" height="220px" width="100%" alt="">
                 </li>
                 <li class="titles">  
                     <span>БЛОГ</span>
@@ -111,7 +113,7 @@
             </ul>
             <ul class="blogs-info">
                 <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                    <img src="https://picsum.photos/230/?random" height="220px" width="100%" alt="">
                 </li>
                 <li class="titles">    
                     <span>БЛОГ</span>
@@ -127,7 +129,7 @@
         <ul class="blogs-block">
             <ul id="first_element"  class="blogs-info">
                 <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                    <img src="https://picsum.photos/230/?random" height="220px" width="100%" alt="">
                 </li>
                 <li class="titles">  
                     <span>БЛОГ</span>
@@ -141,7 +143,7 @@
             </ul>
             <ul class="blogs-info">
                 <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                    <img src="https://picsum.photos/230/?random" height="220px" width="100%" alt="">
                 </li>
                 <li class="titles">  
                     <span>БЛОГ</span>
@@ -155,7 +157,7 @@
             </ul>
             <ul class="blogs-info">
                 <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                    <img src="https://picsum.photos/230/?random" height="220px" width="100%" alt="">
                 </li>
                 <li class="titles">  
                     <span>БЛОГ</span>
@@ -169,7 +171,7 @@
             </ul>
             <ul class="blogs-info">
                 <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
+                    <img src="https://picsum.photos/230/?random" height="220px" width="100%" alt="">
                 </li>
                 <li class="titles">    
                     <span>БЛОГ</span>
