Links and links and links

--- a/index.html
+++ b/index.html
@@ -42,28 +42,28 @@
     <div id="categories">
         <ul>
             <li>
-                <span>ДО ШКОЛЫ</span>
+                <a href="">ДО ШКОЛЫ</a>
             </li>
             <li>
-                <span>ШКОЛА</span>
+                <a href="">ШКОЛА</a>
             </li>
             <li>
-                <span>ВУЗ</span>
+                <a href="">ВУЗ</a>
             </li>
             <li>
-                <span>ПЕРЕМЕНА</span>
+                <a href="">ПЕРЕМЕНА</a>
             </li>
             <li>
-                <span>СЕМЬЯ</span>
+                <a href="">СЕМЬЯ</a>
             </li>
             <li>
-                <span>ПРОФЕССИИ БУДУЩЕГО</span>
+                <a href="">ПРОФЕССИИ БУДУЩЕГО</a>
             </li>
             <li>
-                <span>ПОДРОСТКИ</span>
+                <a href="">ПОДРОСТКИ</a>
             </li>
             <li>
-                <span>БЛОГИ</span>
+                <a href="">БЛОГИ</a>
             </li>
         </ul>
     </div>
