social links and flex block

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                     <span>fsd</span>
                 </li>
                 <li class="times-view">
+                    <i class="fas fa-history"></i>
                     <span>sdhffdsh</span>
                 </li>
             </ul>
@@ -94,6 +95,7 @@
                     <span>6 способов помочь детям полюбить чтение</span>
                 </li>
                 <li class="times-view">
+                    <i class="fas fa-history"></i>
                     <span>Читать: 3 мин</span>
                 </li>
             </ul>
@@ -108,6 +110,7 @@
                     <span>Когда учитель говорит девочкам "Вам же рожать!"</span>
                 </li>
                 <li class="times-view">
+                    <i class="fas fa-history"></i>
                     <span>Читать: 5 мин</span>
                 </li>
             </ul>
@@ -122,6 +125,7 @@
                     <span>Ярмарка тщеславия в школе: конкурсы, проекты, снова конкурсы</span>
                 </li>
                 <li class="times-view">
+                    <i class="fas fa-history"></i>
                     <span>Читать: 6 мин</span>
                 </li>
             </ul>
@@ -186,7 +190,7 @@
         </ul>
     </div>
     <div id="button">
-        <input type="button" class="knopka01" value="Больше статей">
+        <input type="button" class="button-styles" value="Больше статей">
     </div>
     <div id="e-mail">
         <ul>
@@ -195,7 +199,9 @@
             </li>
             <li id="searching">
                 <input type="text" placeholder="Пиши e-mail...">
-                <button type="submit"></button>
+                <button type="submit">
+                    <i class="fab fa-telegram-plane"></i>
+                </button>
             </li>
             <li id="inf-about-mail">
                 <span>Мы отправляем нашу интересную и очень полезную рассылку два раза в неделю: во вторник и пятницу</span>
@@ -224,7 +230,20 @@
                 <a href="">Архив материалов</a>
                 <a href="">Популярные темы</a>
             </li>
-            <li></li>
+            <li id="icon-web">
+                <a href="">
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-vk"></i>
+                    <i class="fab fa-odnoklassniki"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-flipboard"></i>
+                    <i class="fab fa-telegram-plane"></i>
+                </a>
+            </li>
+            <li id="traid-mark">
+                <span>© Мел, 2019</span>
+            </li>
         </ul>
     </div>
 </body>
