add button for head and change in head ul on div, some media for header and some small changes

--- a/index.html
+++ b/index.html
@@ -17,16 +17,22 @@
 </head>
 <body>
     <header>
-        <ul>
-            <li id="sait-name">
+        <div id="head-full">
+            <div id="sait-name">
                 <a href="">мел</a>
-            </li>
-            <li id="inf-head">
-                <a href="" class="categori-head">Подипски</a>
-                <a href="" class="categori-head">Школы "Мелы"</a>
-                <a href="" class="categori-head">Афиша</a>
-            </li>
-            <li id="sing-up-and-make-blog">
+            </div>
+            <ul id="inf-head">
+                <li>
+                    <a href="" class="categori-head">Подипски</a>
+                </li>
+                <li>
+                    <a href="" class="categori-head">Школы "Мелы"</a>
+                </li>
+                <li>
+                    <a href="" class="categori-head">Афиша</a>
+                </li>
+            </ul>
+            <div id="sing-up-and-make-blog">
                 <a id="blog-search" href="">
                     <i class="fas fa-search"></i>
                 </a>
@@ -35,9 +41,9 @@
                         <span>НАПИСАТЬ В БЛОГ</pan>
                     </i>
                 </a>
-                <a href="" id="entrance">ВХОД</a>
-            </li>
-        </ul>
+                <input type="button"  id="entrance" value="ВХОД">
+            </div>
+        </div>
     </header>
     <div id="categories">
         <ul>
@@ -164,7 +170,7 @@
                     <img src="https://picsum.photos/230/?random" height="220px" width="100%" alt="">
                 </li>
                 <li class="titles">  
-                    <span>БЛОГ</span>
+                    <p>БЛОГ</p>
                 </li>
                 <li class="info-about">
                     <span></span>
