Change media in head, iformation, blogs and catalog. Change button in head and all font in text is Sans

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                         <span>НАПИСАТЬ В БЛОГ</pan>
                     </i>
                 </a>
-                <input type="button"  id="entrance" value="ВХОД">
+                <button  id="entrance">
+                    <span id="entarance-text">ВХОД</span>
+                </button>
             </div>
         </div>
     </header>
