Change media in a header and new media, and line in active.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="">мел</a>
             </div>
             <ul id="inf-head">
-                <li>
+                <li id="ative-line">
                     <a href="" class="categori-head">Подипски</a>
                 </li>
                 <li>
