new flex and added js code

--- a/index.html
+++ b/index.html
@@ -12,175 +12,74 @@
     <link rel="stylesheet" href="./css/blogs-style.css">
     <link rel="stylesheet" href="./css/categories-style.css">
     <link rel="stylesheet" href="./css/e-mail-style.css">
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="./css/button-style.css">
 </head>
 <body>
     <header>
-        <div id="sait-name">
-            <span>мел</span>
+        <div id="head-full">
+            <div id="sait-name">
+                <a href="">мел</a>
+            </div>
+            <ul id="inf-head">
+                <li id="ative-line">
+                    <a href="" class="categori-head">Подипски</a>
+                </li>
+                <li>
+                    <a href="" class="categori-head">Школы "Мелы"</a>
+                </li>
+                <li>
+                    <a href="" class="categori-head">Афиша</a>
+                </li>
+            </ul>
+            <div id="sing-up-and-make-blog">
+                <a id="blog-search" href="">
+                    <i class="fas fa-search"></i>
+                </a>
+                <a id="blog-write" href="">
+                    <i class="fas fa-pen-square">
+                        <span>НАПИСАТЬ В БЛОГ</pan>
+                    </i>
+                </a>
+                <button  id="entrance">
+                    <span id="entarance-text">ВХОД</span>
+                </button>
+            </div>
         </div>
-        <ul>
-            <li id="inf-head">
-                <span class="categori-head">Подипски</span>
-                <span class="categori-head">Школы "Мелы"</span>
-                <span class="categori-head">Афиша</span>
-            </li>
-        </ul>
-        <ul>
-            <li id="sing-up-and-make-blog">
-                <i class="fas fa-search"></i>
-                <i class="fas fa-pen-square">
-                    <span>НАПИСАТЬ В БЛОГ</span>
-                </i>
-                <span id="entrance">ВХОД</span>
-            </li>
-        </ul>
     </header>
     <div id="categories">
         <ul>
             <li>
-                <span>ДО ШКОЛЫ</span>
+                <a href="">ДО ШКОЛЫ</a>
             </li>
             <li>
-                <span>ШКОЛА</span>
+                <a href="">ШКОЛА</a>
             </li>
             <li>
-                <span>ВУЗ</span>
+                <a href="">ВУЗ</a>
             </li>
             <li>
-                <span>ПЕРЕМЕНА</span>
+                <a href="">ПЕРЕМЕНА</a>
             </li>
             <li>
-                <span>СЕМЬЯ</span>
+                <a href="">СЕМЬЯ</a>
             </li>
             <li>
-                <span>ПРОФЕССИИ БУДУЩЕГО</span>
+                <a href="">ПРОФЕССИИ БУДУЩЕГО</a>
             </li>
             <li>
-                <span>ПОДРОСТКИ</span>
+                <a href="">ПОДРОСТКИ</a>
             </li>
             <li>
-                <span>БЛОГИ</span>
+                <a href="">БЛОГИ</a>
             </li>
         </ul>
     </div>
     <div id="blogs">
-        <ul class="blogs-block">
-            <ul class="blogs-info">
-                <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
-                </li>
-                <li class="titles">  
-                    <span>БЛОГ</span>
-                </li>
-                <li class="info-about">
-                    <span>fsd</span>
-                </li>
-                <li class="times-view">
-                    <span>sdhffdsh</span>
-                </li>
-            </ul>
-            <ul class="blogs-info">
-                <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
-                </li>
-                <li class="titles">  
-                    <span>БЛОГ</span>
-                </li>
-                <li class="info-about">
-                    <span>6 способов помочь детям полюбить чтение</span>
-                </li>
-                <li class="times-view">
-                    <span>Читать: 3 мин</span>
-                </li>
-            </ul>
-            <ul class="blogs-info">
-                <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
-                </li>
-                <li class="titles">  
-                    <span>БЛОГ</span>
-                </li>
-                <li class="info-about">
-                    <span>Когда учитель говорит девочкам "Вам же рожать!"</span>
-                </li>
-                <li class="times-view">
-                    <span>Читать: 5 мин</span>
-                </li>
-            </ul>
-            <ul class="blogs-info">
-                <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
-                </li>
-                <li class="titles">    
-                    <span>БЛОГ</span>
-                </li>
-                <li class="info-about">
-                    <span>Ярмарка тщеславия в школе: конкурсы, проекты, снова конкурсы</span>
-                </li>
-                <li class="times-view">
-                    <span>Читать: 6 мин</span>
-                </li>
-            </ul>
-        </ul>
-        <ul class="blogs-block">
-            <ul class="blogs-info">
-                <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
-                </li>
-                <li class="titles">  
-                    <span>БЛОГ</span>
-                </li>
-                <li class="info-about">
-                    <span></span>
-                </li>
-                <li class="times-view">
-                    <span></span>
-                </li>
-            </ul>
-            <ul class="blogs-info">
-                <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
-                </li>
-                <li class="titles">  
-                    <span>БЛОГ</span>
-                </li>
-                <li class="info-about">
-                    <span></span>
-                </li>
-                <li class="times-view">
-                    <span></span>
-                </li>
-            </ul>
-            <ul class="blogs-info">
-                <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
-                </li>
-                <li class="titles">  
-                    <span>БЛОГ</span>
-                </li>
-                <li class="info-about">
-                    <span></span>
-                </li>
-                <li class="times-view">
-                    <span></span>
-                </li>
-            </ul>
-            <ul class="blogs-info">
-                <li>
-                    <img src="https://picsum.photos/230/?random" height="230px" width="100%" alt="">
-                </li>
-                <li class="titles">    
-                    <span>БЛОГ</span>
-                </li>
-                <li class="info-about">
-                    <span></span>
-                </li>
-                <li class="times-view">
-                    <span></span>
-                </li>
-            </ul>
-        </ul>
+        <div id="blogs-list">
+        </div>
+        <div id="button">
+            <input type="button" id="button_styles" value="Больше статей">
+        </div>
     </div>
     <div id="e-mail">
         <ul>
@@ -189,7 +88,9 @@
             </li>
             <li id="searching">
                 <input type="text" placeholder="Пиши e-mail...">
-                <button type="submit"></button>
+                <button type="submit">
+                    <i class="fab fa-telegram-plane"></i>
+                </button>
             </li>
             <li id="inf-about-mail">
                 <span>Мы отправляем нашу интересную и очень полезную рассылку два раза в неделю: во вторник и пятницу</span>
@@ -199,27 +100,52 @@
     <div id="information">
         <ul>
             <li id="inf-categories">
-                <span>ДО ШКОЛЫ</span>
-                <span>ШКОЛА</span>
-                <span>ВУЗ</span>
-                <span>ПЕРЕМЕНА</span>
-                <span>СЕМЬЯ</span>
-                <span>ПРОФЕССИИ БУДУЩЕГО</span>
-                <span>ПОДРОСТКИ</span>
-                <span>БЛОГИ</span>
+                <a href="">ДО ШКОЛЫ</a>
+                <a href="">ШКОЛА</a>
+                <a href="">ВУЗ</a>
+                <a href="">ПЕРЕМЕНА</a>
+                <a href="">СЕМЬЯ</a>
+                <a href="">ПРОФЕССИИ БУДУЩЕГО</a>
+                <a href="">ПОДРОСТКИ</a>
+                <a href="">БЛОГИ</a>
             </li>
             <li id="inf">
-                <span>© Мел, 2019</span>
-                <span>Контакты</span>
-                <span>Реклама</span>
-                <span>Пользовательское соглашение</span>
-                <span>Политика конфиденциальности</span>
-                <span>Политика в отношении обработки персональных данны</span>
-                <span>Архив материалов</span>
-                <span>Популярные темы</span>
+                <a href="">© Мел, 2019</a>
+                <a href="">Контакты</a>
+                <a href="">Реклама</a>
+                <a href="">Пользовательское соглашение</a>
+                <a href="">Политика конфиденциальности</a>
+                <a href="">Политика в отношении обработки персональных данны</a>
+                <a href="">Архив материалов</a>
+                <a href="">Популярные темы</a>
             </li>
-            <li></li>
+            <li id="icon-web">
+                <a href="">
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-vk"></i>
+                    <i class="fab fa-odnoklassniki"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-flipboard"></i>
+                    <i class="fab fa-telegram-plane"></i>
+                </a>
+            </li>
+            <li id="traid-mark">
+                <span>© Мел, 2019</span>
+            </li>
         </ul>
     </div>
+    <template id="infoForCard">
+        <a class="img-blog">
+            <img src="" height="220px" width="100%" alt="">
+        </a>
+        <a class="titles">БЛОГ</a>
+        <a class="info-about"></a>
+        <a class="times-view">
+            <i class="fas fa-history"></i>
+            <span></span>
+        </a>
+    </template>
 </body>
+<script src="./js/cardsMaker.js"></script>
 </html>
